Correções para executar no .NET 7

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,11 +13,10 @@
     }
   },
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Verbose",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
