--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,13 @@
   "AppSettings": {
     "AnalyticsEnabled": true
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080"
+      }
+    }
+  },
   "Data": {
     "MongoConnection": {
       "ConnectionString": "mongodb://orders-db:27017/",
